@@ -15,6 +15,7 @@
 */
 
 #include <ecl/ecl.h>
+#include <stdio.h>
 #include <limits.h>
 #include <float.h>
 #include <math.h>
