@@ -13,7 +13,6 @@
 */
 
 #include <ecl/ecl.h>
-
 #include <stdio.h>
 #include <sys/types.h>
 #include <errno.h>
